6-istio-基础演示/1-子集和权重/1-nginx-all-v1.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx
  namespace: istio-test
spec:
  hosts:
  - nginx
  http:
  - route:
    - destination:
        host: nginx
        subset: appv1
